--- a/src/page-404.html
+++ b/src/page-404.html
@@ -234,7 +234,7 @@
     <a href="#" class="back-to-top js-back-to-top">
       <img src="./assets/images/common/back-to-top.svg" alt="トップへ戻るボタン">
     </a>
-    <footer class="footer layout-footer">
+    <footer class="footer layout-footer layout-page-404--footer">
       <div class="footer__wrap">
         <div class="footer__icon-wrap">
           <a href="#" class="footer__logo"><img src="./assets/images/common/icon.svg" alt="ロゴ"></a>
