--- a/src/page-information.html
+++ b/src/page-information.html
@@ -227,19 +227,19 @@
       <div class="page-information__inner inner fish-image">
         <div class="page-information__tab tab">
           <div class="tab__list">
-            <button class="tab__button tab__example-mask--white js-tab-button is-active" id="license-lecture">
+            <button class="tab__button tab__example-mask--white js-tab-list is-active" id="license-lecture">
               <span class="u-desktop"></span>ライセンス<br class="u-mobile">講習
             </button>
-            <button class="tab__button tab__example-mask--green js-tab-button" id="fun-diving">
+            <button class="tab__button tab__example-mask--green js-tab-list" id="fun-diving">
               <span class="u-desktop"></span>ファン<br class="u-mobile">ダイビング
             </button>
-            <button class="tab__button tab__example-mask--green2 js-tab-button" id="intro-diving">
+            <button class="tab__button tab__example-mask--green2 js-tab-list" id="intro-diving">
               <span class="u-desktop"></span>体験<br class="u-mobile">ダイビング
             </button>
           </div>
           
           <div class="tab__contents">
-            <div class="tab__content js-tab-content is-active">
+            <div class="tab__content js-information-tab-content is-active">
               <div class="tab__item">
                 <div class="tab__wrap">
                   <p class="tab__title">ライセンス講習</p>
@@ -248,7 +248,7 @@
                   <img src="./assets/images/common/Information-p-img1.jpg" alt="5人の人がダイビングをしている様子" class="tab__img">
               </div>
             </div>
-            <div class="tab__content js-tab-content">
+            <div class="tab__content js-information-tab-content">
               <div class="tab__item">
                 <div class="tab__wrap">
                   <p class="tab__title">ファンダイビング</p>
@@ -257,7 +257,7 @@
                 <img src="./assets/images/common/Information-p-img2.jpg" alt="沢山のピンク色の魚が泳いでいる様子" class="tab__img">
               </div>
             </div>
-            <div class="tab__content js-tab-content">
+            <div class="tab__content js-information-tab-content">
               <div class="tab__item">
                 <div class="tab__wrap">
                   <p class="tab__title">体験ダイビング</p>
