--- a/src/index.html
+++ b/src/index.html
@@ -456,7 +456,7 @@
 <!-- Voice -->
     <section id="#" class="voice layout-voice">
       <div class="voice__inner inner">
-        <div class="voice__itle">
+        <div class="voice__title">
           <div class="title">
             <p class="title__main">Voice</p>
             <h2 class="title__sub">お客様の声</h2>
